[package]
name = "rust-secp256k1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }
rand = "0.8"  # For generating random numbers
